<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_color"
        tools:context=".Receiver">
    <TextView
            android:background="@drawable/round_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receiver_details"
            android:padding="@dimen/heading_padding"
            android:backgroundTint="@color/background_color_heading"
            android:textSize="@dimen/heading_font_size"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="@font/acme"
            android:layout_marginBottom="@dimen/heading_margin_bottom"
    >
    </TextView>

    <EditText
            android:background="@drawable/inputfield_rounded_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginStart="@dimen/textfield_margin_left"
            android:layout_marginEnd="@dimen/textfield_margin_right"
            android:layout_marginBottom="@dimen/input_margin_bottom"
            android:backgroundTint="@color/white"
            android:padding="@dimen/textfield_padding"
            android:id="@+id/txtReceiverEmail"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
    >
    </EditText>

    <EditText
            android:background="@drawable/inputfield_rounded_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:layout_marginStart="@dimen/textfield_margin_left"
            android:layout_marginEnd="@dimen/textfield_margin_right"
            android:layout_marginBottom="@dimen/input_margin_bottom"
            android:backgroundTint="@color/white"
            android:padding="@dimen/textfield_padding"
            android:id="@+id/txtReceiverFullName"
            android:inputType="text"
            android:imeOptions="actionNext"
    >
    </EditText>
    <EditText
            android:background="@drawable/inputfield_rounded_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_information"
            android:layout_marginStart="@dimen/textfield_margin_left"
            android:layout_marginEnd="@dimen/textfield_margin_right"
            android:layout_marginBottom="@dimen/input_margin_bottom"
            android:backgroundTint="@color/white"
            android:padding="@dimen/textfield_padding"
            android:id="@+id/txtReceiverContact"
            android:inputType="phone"
            android:imeOptions="actionNext"
    >
    </EditText>
    <EditText
            android:background="@drawable/inputfield_rounded_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country"
            android:layout_marginStart="@dimen/textfield_margin_left"
            android:layout_marginEnd="@dimen/textfield_margin_right"
            android:layout_marginBottom="@dimen/input_margin_bottom"
            android:backgroundTint="@color/white"
            android:padding="@dimen/textfield_padding"
            android:id="@+id/txtReceiverCountry"
            android:inputType="text"
            android:imeOptions="actionNext"
    >
    </EditText>
    <EditText
            android:background="@drawable/inputfield_rounded_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:layout_marginStart="@dimen/textfield_margin_left"
            android:layout_marginEnd="@dimen/textfield_margin_right"
            android:layout_marginBottom="@dimen/input_margin_bottom"
            android:backgroundTint="@color/white"
            android:padding="@dimen/textfield_padding"
            android:id="@+id/txtReceiverAddress"
            android:inputType="text"

    >
    </EditText>
    <Button
            android:background="@drawable/inputfield_rounded_border"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/btnSend"
            android:textColor="@color/white"
            android:backgroundTint="@color/background_color_heading"
            android:layout_gravity="center"
            android:id="@+id/btnReceiverNext"
            android:textStyle="bold"
    >

    </Button>

</LinearLayout>