<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".Review">

    <TextView
            android:background="@drawable/round_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/review_details"
            android:padding="@dimen/heading_padding"
            android:backgroundTint="@color/background_color_heading"
            android:textSize="@dimen/heading_font_size"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/heading"
            android:fontFamily="@font/acme"
    >
    </TextView>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/heading"
            android:stretchColumns="*"
    >
        <TableRow android:layout_marginTop="@dimen/row_margin_top">
            <TextView
                    android:text="@string/tbh_name"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textColor="@color/black"
            >
            </TextView>
            <TextView
                android:text="@string/tbh_country"
                android:textStyle="bold"
                android:padding="8dp"
                android:gravity="center"
                android:textColor="@color/black"
            >
            </TextView>
            <TextView
                    android:text="@string/tbh_address"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/black"
            >

            </TextView>
            <TextView
                    android:text="@string/tbh_contact_info"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/black"
            >
            </TextView>
        </TableRow>
        <TableRow android:layout_marginTop="@dimen/row_margin_top">>
            <TextView
                    android:id="@+id/trtxtSenderName"
                    android:gravity="center"
                    android:textColor="@color/black"
            />
            <TextView
                    android:id="@+id/trtxtCSenderountry"
                    android:gravity="center"
                    android:textColor="@color/black"
            />
            <TextView
                    android:id="@+id/trtxtSenderAddress"
                    android:gravity="center"
                    android:textColor="@color/black"
            />
            <TextView
                    android:id="@+id/trtxtSenderContactInfo"
                    android:gravity="center"
                    android:textColor="@color/black"
            />
        </TableRow>
        <TableRow android:layout_marginTop="@dimen/row_margin_top">>
            <ImageView
                    android:src="@drawable/data_transfer_icon"
            />
        </TableRow>
        <TableRow android:layout_marginTop="@dimen/row_margin_top">>
            <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/trtxtReceiverName"
                    android:gravity="center"
                    android:textColor="@color/black"
            />
            <TextView
                    android:id="@+id/trtxtReceiverCountry"
                    android:gravity="center"
                    android:textColor="@color/black"
            />
            <TextView
                    android:id="@+id/trtxtReceiverAddress"
                    android:gravity="center"
                    android:textColor="@color/black"
            />
            <TextView
                    android:id="@+id/trtxtReceiverContactInfor"
                    android:gravity="center"
                    android:textColor="@color/black"
            />
        </TableRow>
    </TableLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:backgroundTint="@color/background_color_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/addicon"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="5dp"
            android:id="@+id/fabbtnNext"
    />

</RelativeLayout>